gnupg: need an option to automatically refuse signing photo-ids
Closed, ResolvedPublic

Assigned To
Authored By
dleidert
Jun 17 2010, 6:49 PM

Description

Citing a Debian user:

I'd like to see an option to automatically filter out all photo ids when
(mass-) editing keys, so only text ids are considered.

Details

External Link
http://bugs.debian.org/569702
Version
1.4.10

Event Timeline

dleidert set External Link to http://bugs.debian.org/569702.Jun 17 2010, 6:49 PM
dleidert set Version to 1.4.10.
dleidert added a subscriber: dleidert.

May I ask for the status of this bug?

neal claimed this task.

Added the option --only-sign-text-ids in 28e1982